Fixed flying out of y bounds

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body style="background-color: #a4d2ff; margin: 0; width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center">
     <!--'screen' to draw game-->
-    <canvas id="canvas" style="width: 288px; height: 512px; border-radius: 5px;"></canvas>
+    <canvas id="canvas" style="width: 288px; height: 512px; border-radius: 5px; cursor: pointer;"></canvas>
     <!--game code-->
     <script type="module" src="src/main.js"></script>
 </body>
